feat: register account added
