# docs/swagger.json
@@ -4,6 +4,25 @@
         "contact": {}
     },
     "paths": {
+        "/auth/register": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "parameters": [
+                    {
+                        "description": "register",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/memorize_internal_service_authentication.RegisterUserRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/users": {
             "get": {
                 "tags": [
@@ -101,6 +120,23 @@
         }
     },
     "definitions": {
+        "memorize_internal_service_authentication.RegisterUserRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 100
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 300
+                }
+            }
+        },
         "memorize_internal_service_authentication_user.CreateUserRequest": {
             "type": "object",
             "required": [
