# internal/service/authentication/authentication_requests.go
@@ -1,0 +1,6 @@
+package authentication
+
+type RegisterUserRequest struct {
+	Email    string `json:"email" validate:"required,email,max=100"`
+	Password string `json:"password" validate:"required,max=300"`
+}
